Updated: Order Controller, Swagger and TestCases
