# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\UserController;
 use App\Http\Controllers\ForgotPasswordController;
 use App\Http\Controllers\AddressController;
 use App\Http\Controllers\CartController;
+use App\Http\Controllers\OrderController;
 use Illuminate\Support\Facades\Password;
 
 /*
@@ -51,6 +52,9 @@ Route::group(['middleware' => 'api'], function () {
     Route::post('updateuseraddress', [AddressController::class, 'updateAddress']);
     Route::post('deleteuseraddress', [AddressController::class, 'deleteAddress']);
     Route::get('getuseraddresses', [AddressController::class, 'getAddress']);
+
+    Route::post('placeorder', [OrderController::class, 'placeOrder']);
+    Route::post('cancelorder', [OrderController::class, 'cancelOrder']);
 });
 
 Route::group(['middleware' => ['jwt.verify']], function () {
